<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_produces"
            android:icon="@drawable/ic_menu_produces_fill"
            android:title="@string/menu_produces" />
        <item
            android:id="@+id/nav_containers"
            android:icon="@drawable/ic_menu_container_fill"
            android:title="@string/menu_containers" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/stew_1_svgrepo_com"
            android:title="@string/menu_recipes" />
    </group>
</menu>