<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.client.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_produces"
        android:name="com.example.client.ui.produces.ProducesFragment"
        android:label="@string/menu_produces"
        tools:layout="@layout/fragment_produces" />

    <fragment
        android:id="@+id/nav_containers"
        android:name="com.example.client.ui.containers.ContainersFragment"
        android:label="@string/menu_containers"
        tools:layout="@layout/fragment_containers" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.client.ui.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" />
</navigation>